# FF

./: .gitignore  README.md  SETUP.md  gradlew  pubspec.yaml
.github/workflows/: android_build.yml  build.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  calculator.cpp  calculator.h  calculator_jni.cpp
android/app/src/main/java/com/example/calculator/: CalcBridge.java
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lucid/player/service/: MusicService.kt
app/src/main/java/com/vibeplayer/: MainActivity.kt  VibePlayerApp.kt
app/src/main/java/com/vibeplayer/data/local/: Database.kt  MediaStoreScanner.kt  PreferencesManager.kt
app/src/main/java/com/vibeplayer/data/model/: Models.kt
app/src/main/java/com/vibeplayer/di/: DatabaseModule.kt  MediaModule.kt
app/src/main/java/com/vibeplayer/service/: MusicPlaybackService.kt
app/src/main/java/com/vibeplayer/ui/: Theme.kt  Typography.kt
app/src/main/java/com/vibeplayer/viewmodel/: LibraryViewModel.kt  PlayerViewModel.kt  SearchViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: calculator_controller.dart  main.dart
lib/native/: calculator_ffi.dart
lib/ui/: calc_button.dart  calculator_screen.dart
test/cpp/: calculator_test.cpp
test/dart/: calculator_controller_test.dart  calculator_widget_test.dart
(+8 files in other folders)
